Fixed table spacing

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ main {
 table {
     align-items: baseline;
     width: 32%;
+    margin-top: 3.8%;
     margin-right: 10px;
     margin-left: 10px;
     margin-bottom: 10px;
